--- a/.drone.yml
+++ b/.drone.yml
@@ -75,16 +75,14 @@ steps:
       cache_from: "modem7/dnscrypt-proxy:latest"
       platforms:  # if it doesn't work run docker run --privileged --rm tonistiigi/binfmt --install all
         - linux/amd64
-        - linux/arm/v6
-        - linux/arm/v7
-        - linux/arm64/v8
+        - linux/arm64
       username:
         from_secret: docker_username
       password:
         from_secret: docker_password
       tags:
         - latest
-        - 2.1.1
+        - 2.1.2
 
 # Doesn't work currently - https://github.com/christian-korneck/docker-pushrm/blob/master/README.md#limitations
 # https://github.com/docker/roadmap/issues/115
